change sizes of images in about us section. fix layout on mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -197,7 +197,7 @@ hr {
 }
 
 .reviews {
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
 }
 
 /* NAVBAR */
@@ -232,10 +232,10 @@ hr {
   }
 }
 
-@media (min-width: 62em) {
-  .featurette-heading {
-    margin-top: 7rem;
-  }
-}
+// @media (min-width: 62em) {
+//   .featurette-heading {
+//     margin-top: 7rem;
+//   }
+// }
 
 /* Background pattern from Toptal Subtle Patterns */
